force-app/main/default/objects/Morning_Meeting__c/Morning_Meeting__c.object-meta.xml
<CustomObject>
    <label>Glass Daily Morning Meeting</label>
    <nameField>
        <displayFormat>Action {000000}</displayFormat>
        <label>Morning Meeting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Glass Daily Morning Meetings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>