force-app/main/default/objects/Morning_Meeting__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Glass Daily Morning Meetings</relationshipLabel>
    <relationshipName>Glass_Daily_Morning_Meetings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>