force-app/main/default/objects/Morning_Meeting__c/fields/Actions__c.field-meta.xml
<CustomField>
    <fullName>Actions__c</fullName>
    <label>Actions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>