force-app/main/default/objects/Morning_Meeting__c/fields/Assigned_to__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Glass_Daily_Morning_Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>