force-app/main/default/objects/Morning_Meeting__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Logistics - Transport</fullName>
            </value>
            <value>
                <fullName>Logistics - Warehouse</fullName>
            </value>
            <value>
                <fullName>Planning - Re Work</fullName>
            </value>
            <value>
                <fullName>Quality - Glass</fullName>
            </value>
            <value>
                <fullName>Quality - Packaging</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>