force-app/main/default/objects/Morning_Meeting__c/fields/Issue__c.field-meta.xml
<CustomField>
    <fullName>Issue__c</fullName>
    <label>Issue</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>