force-app/main/default/objects/Morning_Meeting__c/fields/Not_updated__c.field-meta.xml
<CustomField>
    <fullName>Not_updated__c</fullName>
    <formula>Today()- Datevalue( LastModifiedDate) &gt; 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Not updated</label>
    <type>Checkbox</type>
</CustomField>