force-app/main/default/objects/Morning_Meeting__c/fields/To_be_completed_by__c.field-meta.xml
<CustomField>
    <fullName>To_be_completed_by__c</fullName>
    <inlineHelpText>When the task needs to be completed</inlineHelpText>
    <label>To be completed by:</label>
    <type>Date</type>
</CustomField>