force-app/main/default/objects/Morning_Meeting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Category__c</columns>
    <columns>Issue__c</columns>
    <columns>Assigned_to__c</columns>
    <columns>Date_Raised__c</columns>
    <columns>Last_Updated__c</columns>
    <columns>Actions__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>