force-app/main/default/objects/Morning_Meeting__c/listViews/Open.listView-meta.xml
<ListView>
    <fullName>Open</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Issue__c</columns>
    <columns>Assigned_to__c</columns>
    <columns>Date_Raised__c</columns>
    <columns>To_be_completed_by__c</columns>
    <columns>Last_Updated__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>OPEN</value>
    </filters>
    <label>Open</label>
</ListView>